package fr.univnantes.alma.modele.api.enums;

public enum Couleur {
    Bleu,
    Blanc,
    Orange,
    Rouge;
}
