package fr.univnantes.alma.modele.api.enums;

public enum Developpement {
    PointsDeVictoire,
    Chevalier,
    Monopole,
    Invention,
    ConstructionDeRoutes;
}
