package fr.univnantes.alma.modele.api.enums;

public enum FicheSpeciale {
    RoutePlusLongue,
    ArmeePlusPuissante;
}
