package fr.univnantes.alma.modele.api.enums;

public enum Ressource {
    Bois,
    Argile,
    Laine,
    Blé,
    Minerai;

}
