package fr.univnantes.alma.modele.impl;

public class Colonie extends ConstructionImpl {
    @Override
    public int getPuissance() {
        return 1;
    }
}
