package fr.univnantes.alma.modele.impl;

public class Ville extends ConstructionImpl {
    @Override
    public int getPuissance() {
        return 2;
    }
}
